src/test/ui/asm/x86_64/bad-reg.stderr
error: invalid register class `foo`: unknown register class
  --> $DIR/bad-reg.rs:14:20
   |
LL |         asm!("{}", in(foo) foo);
   |                    ^^^^^^^^^^^

error: invalid register `foo`: unknown register
  --> $DIR/bad-reg.rs:16:18
   |
LL |         asm!("", in("foo") foo);
   |                  ^^^^^^^^^^^^^

error: invalid asm template modifier for this register class
  --> $DIR/bad-reg.rs:18:15
   |
LL |         asm!("{:z}", in(reg) foo);
   |               ^^^^   ----------- argument
   |               |
   |               template modifier
   |
   = note: the `reg` register class supports the following template modifiers: `l`, `x`, `e`, `r`

error: invalid asm template modifier for this register class
  --> $DIR/bad-reg.rs:20:15
   |
LL |         asm!("{:r}", in(xmm_reg) foo);
   |               ^^^^   --------------- argument
   |               |
   |               template modifier
   |
   = note: the `xmm_reg` register class supports the following template modifiers: `x`, `y`, `z`

error: asm template modifiers are not allowed for `const` arguments
  --> $DIR/bad-reg.rs:22:15
   |
LL |         asm!("{:a}", const 0);
   |               ^^^^   ------- argument
   |               |
   |               template modifier

error: asm template modifiers are not allowed for `sym` arguments
  --> $DIR/bad-reg.rs:24:15
   |
LL |         asm!("{:a}", sym main);
   |               ^^^^   -------- argument
   |               |
   |               template modifier

error: invalid register `ebp`: the frame pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:26:18
   |
LL |         asm!("", in("ebp") foo);
   |                  ^^^^^^^^^^^^^

error: invalid register `rsp`: the stack pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:28:18
   |
LL |         asm!("", in("rsp") foo);
   |                  ^^^^^^^^^^^^^

error: invalid register `ip`: the instruction pointer cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:30:18
   |
LL |         asm!("", in("ip") foo);
   |                  ^^^^^^^^^^^^

error: invalid register `k0`: the k0 AVX mask register cannot be used as an operand for inline asm
  --> $DIR/bad-reg.rs:32:18
   |
LL |         asm!("", in("k0") foo);
   |                  ^^^^^^^^^^^^

error: invalid register `ah`: high byte registers cannot be used as an operand on x86_64
  --> $DIR/bad-reg.rs:34:18
   |
LL |         asm!("", in("ah") foo);
   |                  ^^^^^^^^^^^^

error: register class `x87_reg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:37:18
   |
LL |         asm!("", in("st(2)") foo);
   |                  ^^^^^^^^^^^^^^^

error: register class `mmx_reg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:39:18
   |
LL |         asm!("", in("mm0") foo);
   |                  ^^^^^^^^^^^^^

error: register class `x87_reg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:43:20
   |
LL |         asm!("{}", in(x87_reg) foo);
   |                    ^^^^^^^^^^^^^^^

error: register class `mmx_reg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:45:20
   |
LL |         asm!("{}", in(mmx_reg) foo);
   |                    ^^^^^^^^^^^^^^^

error: register class `x87_reg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:47:20
   |
LL |         asm!("{}", out(x87_reg) _);
   |                    ^^^^^^^^^^^^^^

error: register class `mmx_reg` can only be used as a clobber, not as an input or output
  --> $DIR/bad-reg.rs:49:20
   |
LL |         asm!("{}", out(mmx_reg) _);
   |                    ^^^^^^^^^^^^^^

error: register `al` conflicts with register `ax`
  --> $DIR/bad-reg.rs:55:33
   |
LL |         asm!("", in("eax") foo, in("al") bar);
   |                  -------------  ^^^^^^^^^^^^ register `al`
   |                  |
   |                  register `ax`

error: register `ax` conflicts with register `ax`
  --> $DIR/bad-reg.rs:57:33
   |
LL |         asm!("", in("rax") foo, out("rax") bar);
   |                  -------------  ^^^^^^^^^^^^^^ register `ax`
   |                  |
   |                  register `ax`
   |
help: use `lateout` instead of `out` to avoid conflict
  --> $DIR/bad-reg.rs:57:18
   |
LL |         asm!("", in("rax") foo, out("rax") bar);
   |                  ^^^^^^^^^^^^^

error: register `ymm0` conflicts with register `xmm0`
  --> $DIR/bad-reg.rs:60:34
   |
LL |         asm!("", in("xmm0") foo, in("ymm0") bar);
   |                  --------------  ^^^^^^^^^^^^^^ register `ymm0`
   |                  |
   |                  register `xmm0`

error: register `ymm0` conflicts with register `xmm0`
  --> $DIR/bad-reg.rs:62:34
   |
LL |         asm!("", in("xmm0") foo, out("ymm0") bar);
   |                  --------------  ^^^^^^^^^^^^^^^ register `ymm0`
   |                  |
   |                  register `xmm0`
   |
help: use `lateout` instead of `out` to avoid conflict
  --> $DIR/bad-reg.rs:62:18
   |
LL |         asm!("", in("xmm0") foo, out("ymm0") bar);
   |                  ^^^^^^^^^^^^^^

error: aborting due to 21 previous errors

